# demo_representation

./: .env.example  .gitignore  README.md  config_all.py  conftest.py  pyproject.toml
page/api/: page_steps.py
page/mobile_app/: page_steps.py
tests/api/cloud/: conftest.py  test_authorization.py  test_cart_add.py  test_cart_clear.py
tests/api/local/: conftest.py  test_authorization.py  test_cart_add.py  test_cart_clear.py
tests/api/page/: page_asserts.py  page_steps.py
tests/mobile_app/cloud/: conftest.py  test_authorization.py  test_search_and_add_to_cart.py
tests/mobile_app/local_real/: conftest.py  test_authorization.py  test_search_and_add_to_cart.py
tests/mobile_app/page/: page_asserts.py
tests/mobile_app/resources/: DNS_SHOP_0.81.2-1_apkcombo.app.apk
tests/mobile_app/utils/: attach.py
tests/web/cloud/: conftest.py  test_add_product_to_cart.py  test_authorization.py
tests/web/local/: conftest.py  test_add_product_to_cart.py  test_authorization.py
tests/web/page/: page_asserts.py  page_steps.py
tests/web/utils/: attach.py
utils/mobile_app/: attach.py
